metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/LiveText__SMS_Message__c.object-meta.xml
<CustomObject>
    <description>An SMS message</description>
    <label>SMS Message</label>
    <nameField>
        <label>SMS Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>