metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Account__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account related to this message</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>