metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Contact__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact related to this message</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>