metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__EnforceObjectPresence__c.field-meta.xml
<CustomField>
    <fullName>LiveText__EnforceObjectPresence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked and the object specified by ObjectId is is deleted, the send will fail.</description>
    <label>EnforceObjectPresence</label>
    <type>Checkbox</type>
</CustomField>