metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Error_Message__c</fullName>
    <description>Any error message associated with this SMS</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>