metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Is_ITR__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Is_ITR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if it's from ITR</description>
    <label>Is ITR?</label>
    <type>Checkbox</type>
</CustomField>