metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Lead__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead related to this message</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>