metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__LiveText_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__LiveText_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LiveMessage number to send this message from</description>
    <label>LiveMessage Number</label>
    <referenceTo>LiveText__LiveText_Number__c</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>