metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Message_Status__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Message_Status__c</fullName>
    <description>Status of the message</description>
    <label>Message Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>