metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Object_Id__c</fullName>
    <description>Id of the object related to this message</description>
    <label>Object Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>