metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Opt_in_Status__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Opt_in_Status__c</fullName>
    <description>Opt-in status of the subscriber at the time of sending the message</description>
    <label>Opt-in Status</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>