metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__To_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__To_Phone_Number__c</fullName>
    <description>Phone number to send the message to</description>
    <label>To Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>