metadata-sfdx/force-app/main/default/objects/LiveText__SMS_Message__c/fields/LiveText__Use_Queueable__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Use_Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, queueable queue will be used to send message.</description>
    <label>Use Queueable</label>
    <type>Checkbox</type>
</CustomField>